syntax = "proto3";

package protodata.test;

option java_package = "io.spine.protodata.test";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

message UserId {

    string uuid = 1;
}
